	  and handle it when we're in a stable state, i.e, when we're
	  waiting for input from the user.  New function
	  allow_pending_sigwinch(); changes to signal_init(),
	  get_kbinput(), and get_verbatim_kbinput(). (DLR)
	- Decouple the paragraph searching code and the justifying code.
	  Removed function do_para_operation(); new function
	  do_para_search(); changes to do_justify(). (DLR)
- files.c:
  add_open_files()
	- Make the saving of marked status in open_files->file_flags
	  work properly again; a tweak to the ISSET() macro in 1.3.0
	  to make it only return 0 or 1 broke it. (DLR)
  write_marked()
	- New function used to write the current marked selection to a
	  file, split out from do_writeout(). (DLR)
  filestat()
	- Removed, as it is only called in one place and is
	  redundant. (DLR)
  do_browser()
	- Replace the filestat() call with an equivalent stat() call.
	  (DLR)
- global.c:
  shortcut_init()
	- Only allow verbatim input when we're not in view mode. (DLR)
- nano.c:
  usage()
	- Clarify the description for -T/--tabsize a bit. (DLR)
  do_verbatim_input()
	- Remove the now-unneeded code to disable XON, XOFF, and
	  suspend, since we now go into raw mode in
	  get_verbatim_kbinput() and bypass them. (DLR)
  do_int_speller(), do_alt_speller(), do_spell()
	- Modify to write only the current selection from a file to the
	  temporary file used for spell checking when the mark is on,
	  and add a few miscellaneous cosmetic cleanups. (DLR)
  do_int_spell_fix()
	- Store the value of current_x in a size_t instead of an int,
	  and add a few minor efficiency tweaks. (David Benbennick)
	- Remove comment explaining why findnextstr() is called with
	  bracket_mode set to TRUE even though we aren't doing a bracket
	  search, since after the above efficiency tweaks, it's now more
	  accurately called can_display_wrap. (DLR)
  signal_init()
	- Trap SIGQUIT in addition to turning it off via termios in
	  main().  This is consistent with SIGINT, which we trap here