@@ -42,6 +42,10 @@ filename suffixed with a ~.
 .B \-D (\-\-dos)
 Write file in DOS format.
 .TP
+.B \-E \fIdir\fP (\-\-backupdir=\fIdir\fP)
+Set the directory where \fBnano\fP puts the backup files if file backups
+are enabled.
+.TP
 .B \-F (\-\-multibuffer)
 Enable multiple file buffers, if available.
 .TP
