@@ -47,6 +47,10 @@ Use auto-indentation.
 Create backup files in
 .IR filename~ .
 .TP
+\fBset backupdir "\fIdirectory\fP"\fP
+Set the directory where \fBnano\fP puts the backup files if file backups
+are enabled.
+.TP
 \fBset/unset const\fP
 Constantly display the cursor position in the status bar.
 .TP
